# c2pa-sample-app

./: .claudeignore  .gitignore  Cargo.toml  README.md
.planning/: MILESTONES.md  PROJECT.md  STATE.md
.planning/phases/01-signer-preferences-persistence/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/phases/02-log-panel-default-state/: 02-01-SUMMARY.md
docs/: UI.md  diagrams.md  dioxus.md  tauri-react.md  tauri.md  tier1-requirements.md
docs/specs/: c2pa-manifest-store-v1.x.json  c2pa-manifest-store-v2.0.json  c2pa-manifest-store-v2.1.json  c2pa-manifest-store-v2.2.json  c2pa-manifest-store-v2.3.json  c2pa-manifest-store-v2.4.json
model/: Cargo.toml
model/src/: manifest.rs
model/tests/: manifest_test.rs  preferences_test.rs  recents_test.rs
src/model/: manifest.rs  mod.rs  preferences.rs  recents.rs  signer_prefs.rs
ui/: Cargo.toml  README.md
ui/dioxus/: Cargo.toml  README.md
ui/dioxus/src/: app.rs  logger.rs  main.rs  menu.rs  styles.css
ui/dioxus/src/pages/: settings.rs  sign.rs  verify.rs
ui/src/: app.rs  app_name.rs  macos_display_name.rs  main.rs  menu.rs  styles.css
ui/src/pages/: mod.rs  settings.rs  sign.rs  verify.rs
ui/tauri/: README.md  app.js  index.html  package.json  styles.css
ui/tauri/src-tauri/: Cargo.toml  tauri.conf.json
ui/tauri/src-tauri/capabilities/: default.json
ui/tauri/src-tauri/src/: commands.rs  lib.rs  logger.rs  main.rs
