[workspace]
members = ["ui/dioxus"]
default-members = ["ui/dioxus"]
resolver = "2"

[package]
name = "c2pa-sample-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "c2pa_sample_app"

[dependencies]
c2pa = { version = "0.78.6", features = ["file_io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
