[package]
name = "c2pa-dioxus"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
c2pa-model = { path = "../model" }
rfd = { version = "0.15", features = ["tokio"] }
serde_json = "1"
muda = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["time"] }
