[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
c2pa = "0.78.6"
model = { path = "../model" }
rfd = { version = "0.15", features = ["tokio"] }
serde_json = "1"
muda = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
libc = "0.2"
objc = "0.2"
